[gd_scene load_steps=2 format=3 uid="uid://2ck558rhfn0m"]

[ext_resource type="Script" path="res://Scenes/lobby.gd" id="1_7mr2q"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7mr2q")

[node name="PlayerList" type="ItemList" parent="."]
top_level = true
layout_mode = 0
offset_right = 732.0
offset_bottom = 258.0

[node name="ReadyButton" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 526.0
offset_top = 429.0
offset_right = 582.0
offset_bottom = 460.0
text = "Ready"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0
color = Color(0.633045, 0.0900121, 0.970276, 1)

[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
